<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_propo"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#DDDF"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">


        <TextView
            android:id="@+id/item_libelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/product"
            android:textAlignment="textStart"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/item_magasin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/shop"
            android:textAlignment="center"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/item_ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/city"
            android:textAlignment="center"
            android:textSize="13dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#FF909090" />


        <TextView
            android:id="@+id/item_prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />



    </LinearLayout>

</android.support.v7.widget.CardView>