<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_add"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#DDDF"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">


            <EditText
                android:id="@+id/etCodeDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text="CODE" />

            <EditText
                android:id="@+id/etPrixDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/priceHint"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/etLebelleDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/productHint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etMagasinDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/shopHint"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etVilleDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cityHint"
                android:inputType="textPostalAddress" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#FF909090" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_contact"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_gray"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="@android:style/TextAppearance.Material.Small"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/dialog_bt_fav"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/x"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.CardView>